Adiciona repository e contry data

--- a/cities-api/src/main/resources/application.properties
+++ b/cities-api/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/cities
 spring.datasource.username=postgres_user_cities
 spring.datasource.password=password_user_cities
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
