--- a/cities-api/build.gradle
+++ b/cities-api/build.gradle
@@ -15,7 +15,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'org.postgresql:postgresql'
+	//runtimeOnly 'org.postgresql:postgresql'
+	//necessário alterar para implementation para lidar com PGoint em PointerTyper.java
+	implementation 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 	//prove recursos para o hibernate conseguir lidar com jason, necessário devido ao campo ddd da tabela estados
